# adventofcode_2020

./: .flake8  .pre-commit-config.yaml  README.md  pyproject.toml
day_01/: README.md  output.txt  sum_of_numbers.py
day_02/: README.md  output.txt  validate_passwords.py
day_03/: README.md  output.txt  program.py
day_04/: README.md  output.txt  task.py
day_05/: README.md  output.txt  task.py
day_06/: README.md  output.txt  task.py
day_07/: README.md  output.txt  task.py
day_08/: README.md  output.txt  task.py
day_09/: README.md  output.txt  task.py
day_10/: README.md  output.txt  task.py
day_11/: README.md  output.txt  task.py
day_12/: README.md  output.txt  task.py
