[tool.poetry]
name = "advent_of_code"
version = "0.1.0"
description = "Solutions to advent of code 2020 tasks"
authors = ["Lachezar Bozhkov"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.19.4"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
black = "^20.8b1"
isort = "^5.6.4"
pre-commit = "^2.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
